added OOH queries

--- a/projects/automation/queries.ini
+++ b/projects/automation/queries.ini
@@ -586,7 +586,7 @@ footfall = SELECT
 
 [OOH]
 
-queries = visitors,common_queries,visitors_before,footfall
+queries = visitors,common_queries,visitors_before,footfall,footfall_week,overlap_ooh
 
 
 
@@ -716,4 +716,133 @@ footfall = SELECT
   ON
     during.poi_name = before.poi_name
 
+
+overlap_ooh=WITH campaign_start AS (
+      -- Get the minimum local_day (campaign start date) from the visitors table
+      SELECT MIN(v.local_day) AS start_date
+      FROM {project}.{footfall_dataset}.{codename}_visitors v
+  ),
+  common_dids AS (
+      -- Find common DID values between the two tables
+      SELECT DISTINCT v.did
+      FROM {project}.{footfall_dataset}.{codename}_visitors v
+      INNER JOIN {project}.{back_end_report_dataset}.{codename} br
+      ON v.did = br.devraw
+  ),
+  daily_totals AS (
+      -- Calculate daily counts for common DIDs, backend DIDs, and visitor DIDs
+      SELECT 
+          v.local_day AS local_day,
+          COUNT(DISTINCT cd.did) AS daily_common,
+          (SELECT COUNT(DISTINCT devraw) FROM {project}.{back_end_report_dataset}.{codename} WHERE local_day = v.local_day) AS daily_backend,
+          (SELECT COUNT(DISTINCT did) FROM {project}.{footfall_dataset}.{codename}_visitors WHERE local_day = v.local_day) AS daily_visitors
+      FROM {project}.{footfall_dataset}.{codename}_visitors v
+      LEFT JOIN common_dids cd ON v.did = cd.did
+      GROUP BY v.local_day
+  ),
+  week_groups AS (
+      -- Create week groups based on the campaign start date for common DIDs
+      SELECT 
+          dt.local_day,
+          DATE_DIFF(dt.local_day, cs.start_date, DAY) AS day_diff,
+          DIV(DATE_DIFF(dt.local_day, cs.start_date, DAY), 7) + 1 AS relative_week,
+          dt.daily_common,
+          dt.daily_backend,
+          dt.daily_visitors
+      FROM daily_totals dt
+      CROSS JOIN campaign_start cs
+  ),
+  distinct_weeks AS (
+      -- Get distinct weeks for the common DIDs
+      SELECT DISTINCT relative_week
+      FROM week_groups
+      ORDER BY relative_week
+      LIMIT 7
+  ),
+  positive_weeks AS (
+      -- Calculate the count of DIDs and the overlap percentage for each positive week
+      SELECT 
+          CONCAT('W', CAST(dw.relative_week AS STRING)) AS custom_week_label,
+          SUM(wg.daily_common) AS did_count,
+          dw.relative_week AS order_column,
+          SAFE_DIVIDE(SUM(wg.daily_common), SUM(wg.daily_visitors)) * 100 AS overlap_percentage,
+          SUM(wg.daily_common) AS total_common,
+          SUM(wg.daily_backend) AS total_backend,
+          SUM(wg.daily_visitors) AS total_visitors,
+          (SELECT SAFE_DIVIDE(SUM(daily_common), SUM(daily_visitors)) * 100 FROM week_groups) AS custom_calculation
+      FROM distinct_weeks dw
+      JOIN week_groups wg ON dw.relative_week = wg.relative_week
+      GROUP BY dw.relative_week
+  )
+
+  -- Final output with positive weeks and overlap percentages
+  SELECT 
+      custom_week_label,
+      did_count,
+      order_column,
+      overlap_percentage,
+      total_common,
+      total_backend,
+      total_visitors,
+      custom_calculation
+  FROM positive_weeks
+
+  UNION ALL
+
+  -- Generate negative weeks with zero counts and negative order values
+  SELECT 
+      CONCAT('-W', CAST(dw.relative_week AS STRING)) AS custom_week_label,
+      0 AS did_count,
+      -dw.relative_week AS order_column,
+      0 AS overlap_percentage,
+      0 AS total_common,
+      0 AS total_backend,
+      0 AS total_visitors,
+      (SELECT SAFE_DIVIDE(SUM(daily_common), SUM(daily_visitors)) * 100 FROM week_groups) AS custom_calculation
+  FROM distinct_weeks dw
+
+  ORDER BY order_column;
+
+
+footfall_week=WITH campaign_start AS (
+      SELECT MIN(local_day) AS start_date
+      FROM {project}.{footfall_dataset}.{codename}_visitors
+  ),
+  week_groups AS (
+      SELECT
+          date,
+          DATE_DIFF(date, cs.start_date, DAY) AS day_diff,
+          DIV(DATE_DIFF(date, cs.start_date, DAY), 7) + 1 AS relative_week
+      FROM {project}.Lookups.lu_date, campaign_start cs
+      WHERE date >= cs.start_date
+  ),
+  distinct_weeks AS (
+      SELECT DISTINCT relative_week
+      FROM week_groups
+      ORDER BY relative_week
+      LIMIT 4  -- Ensure only 7 weeks are generated
+  ),
+  visitor_weeks AS (
+      SELECT
+          v.DID,
+          DIV(DATE_DIFF(v.local_day, cs.start_date, DAY), 7) + 1 AS relative_week
+      FROM {project}.{footfall_dataset}.{codename}_visitors v, campaign_start cs
+  )
+  -- Generate positive weeks and their counts
+  SELECT
+      CONCAT('W', CAST(dw.relative_week AS STRING)) AS custom_week_label,
+      COUNT(DISTINCT vw.DID) AS did_count,
+      dw.relative_week AS order_column
+  FROM distinct_weeks dw
+  LEFT JOIN visitor_weeks vw
+  ON dw.relative_week = vw.relative_week
+  GROUP BY dw.relative_week
+  UNION ALL
+  -- Generate exactly 7 negative weeks with zero counts and negative order values
+  SELECT
+      CONCAT('-W', CAST(dw.relative_week AS STRING)) AS custom_week_label,
+      0 AS did_count,
+      -dw.relative_week AS order_column  -- Negative week order
+  FROM distinct_weeks dw
+  ORDER BY order_column;
 
