removed the multiplication by hundred

--- a/projects/automation/queries.ini
+++ b/projects/automation/queries.ini
@@ -326,7 +326,7 @@ footfall = SELECT
     WHEN uniques.controlled THEN 'Controlled'
     ELSE 'Exposed'
     END AS controlled_str,
-    (visitors_count/uniques_count)*100 as Conversion_Rate
+    (visitors_count/uniques_count) as Conversion_Rate
   FROM (
     SELECT
       COUNT(DISTINCT(vis.did)) AS visitors_count,
@@ -505,7 +505,7 @@ visitors_before = SELECT
 footfall = SELECT
     count_during,
     count_before,
-    ((count_during-count_before)/count_before)*100 AS uplift,
+    ((count_during-count_before)/count_before) AS uplift,
     'Total' AS type,
     during.poi_name
   FROM (
@@ -554,7 +554,7 @@ footfall = SELECT
   SELECT
     count_during,
     count_before,
-    ((count_during-count_before)/count_before)*100 AS uplift,
+    ((count_during-count_before)/count_before) AS uplift,
     "Uniques" AS type,
     during.poi_name
   FROM (
@@ -637,7 +637,7 @@ visitors_before = SELECT
 footfall = SELECT
     count_during,
     count_before,
-    ((count_during-count_before)/count_before)*100 AS uplift,
+    ((count_during-count_before)/count_before) AS uplift,
     'Total' AS type,
     during.poi_name
   FROM (
@@ -686,7 +686,7 @@ footfall = SELECT
   SELECT
     count_during,
     count_before,
-    ((count_during-count_before)/count_before)*100 AS uplift,
+    ((count_during-count_before)/count_before) AS uplift,
     "Uniques" AS type,
     during.poi_name
   FROM (
@@ -765,11 +765,11 @@ overlap_ooh=WITH campaign_start AS (
           CONCAT('W', CAST(dw.relative_week AS STRING)) AS custom_week_label,
           SUM(wg.daily_common) AS did_count,
           dw.relative_week AS order_column,
-          SAFE_DIVIDE(SUM(wg.daily_common), SUM(wg.daily_visitors)) * 100 AS overlap_percentage,
+          SAFE_DIVIDE(SUM(wg.daily_common), SUM(wg.daily_visitors))  AS overlap_percentage,
           SUM(wg.daily_common) AS total_common,
           SUM(wg.daily_backend) AS total_backend,
           SUM(wg.daily_visitors) AS total_visitors,
-          (SELECT SAFE_DIVIDE(SUM(daily_common), SUM(daily_visitors)) * 100 FROM week_groups) AS custom_calculation
+          (SELECT SAFE_DIVIDE(SUM(daily_common), SUM(daily_visitors))  FROM week_groups) AS custom_calculation
       FROM distinct_weeks dw
       JOIN week_groups wg ON dw.relative_week = wg.relative_week
       GROUP BY dw.relative_week
@@ -798,7 +798,7 @@ overlap_ooh=WITH campaign_start AS (
       0 AS total_common,
       0 AS total_backend,
       0 AS total_visitors,
-      (SELECT SAFE_DIVIDE(SUM(daily_common), SUM(daily_visitors)) * 100 FROM week_groups) AS custom_calculation
+      (SELECT SAFE_DIVIDE(SUM(daily_common), SUM(daily_visitors)) FROM week_groups) AS custom_calculation
   FROM distinct_weeks dw
 
   ORDER BY order_column;
