changed the employee vs visitor query to a more accurate version

--- a/projects/automation/queries.ini
+++ b/projects/automation/queries.ini
@@ -77,45 +77,58 @@ loyalist_vs_onetime=SELECT
     did,
      poi_id
 
-employee_vs_visitor = SELECT
-    did,
-    "Employee" as type,
-    poi_id
-    FROM (
+employee_vs_visitor =SELECT
+    DISTINCT did,
+    "Employee" AS type,
+    POI_ID
+  FROM (
     SELECT
-    COUNT(DISTINCT(local_day)) AS days,
-    did,
-    poi_id
+      COUNT(DISTINCT(local_day)) AS days_seen,
+      lu_date.week,
+      did,
+      POI_ID
     FROM
-    `{project}.{footfall_dataset}.{codename}_visitors`
+      `{project}.{footfall_dataset}.{codename}_visitors` AS vis
+    JOIN
+      `{project}.Lookups.lu_date` AS lu_date
+    ON
+      Local_Day = lu_date.date
     GROUP BY
+      lu_date.week,
+      did,
+      POI_ID )
+  GROUP BY
     did,
-    poi_id
-    HAVING
-    days >=15 )
-    GROUP BY
-    did,
-    poi_id
-    UNION ALL
+    POI_ID
+  HAVING
+    MAX(days_seen)>=5
+  UNION ALL
+  SELECT
+    DISTINCT did,
+    "Employee" AS type,
+    POI_ID
+  FROM (
     SELECT
-    did,
-    "Visitors" as type,
-    poi_id
-    FROM (
-    SELECT
-    COUNT(DISTINCT(local_day)) AS days,
-    did,
-    poi_id
+      COUNT(DISTINCT(local_day)) AS days_seen,
+      lu_date.week,
+      did,
+      POI_ID
     FROM
-    `{project}.{footfall_dataset}.{codename}_visitors`
+      `{project}.{footfall_dataset}.{codename}_visitors` AS vis
+    JOIN
+      `{project}.Lookups.lu_date` AS lu_date
+    ON
+      Local_Day = lu_date.date
     GROUP BY
+      lu_date.week,
+      did,
+      POI_ID )
+  GROUP BY
     did,
-    poi_id
-    HAVING
-    days <15 )
-    GROUP BY
-    did,
-    poi_id
+    POI_ID
+  HAVING
+    MAX(days_seen)<5
+
 
 socioeco = SELECT
     distinct(did),
