changed the source table name of the streach data

--- a/projects/automation/queries.ini
+++ b/projects/automation/queries.ini
@@ -739,7 +739,7 @@ overlap_ooh=WITH campaign_start AS (
       -- Find common DID values between the two tables
       SELECT DISTINCT v.did
       FROM {project}.{footfall_dataset}.{codename}_visitors v
-      INNER JOIN {project}.{back_end_report_dataset}.{codename} br
+      INNER JOIN {project}.{footfall_dataset}.{codename}_streach br
       ON v.did = br.devraw
   ),
   daily_totals AS (
@@ -747,7 +747,7 @@ overlap_ooh=WITH campaign_start AS (
       SELECT 
           v.local_day AS local_day,
           COUNT(DISTINCT cd.did) AS daily_common,
-          (SELECT COUNT(DISTINCT devraw) FROM {project}.{back_end_report_dataset}.{codename} WHERE local_day = v.local_day) AS daily_backend,
+          (SELECT COUNT(DISTINCT devraw) FROM {project}.{footfall_dataset}.{codename}_streach WHERE local_day = v.local_day) AS daily_backend,
           (SELECT COUNT(DISTINCT did) FROM {project}.{footfall_dataset}.{codename}_visitors WHERE local_day = v.local_day) AS daily_visitors
       FROM {project}.{footfall_dataset}.{codename}_visitors v
       LEFT JOIN common_dids cd ON v.did = cd.did
