--- a/projects/automation/queries.ini
+++ b/projects/automation/queries.ini
@@ -740,14 +740,14 @@ overlap_ooh=WITH campaign_start AS (
       SELECT DISTINCT v.did
       FROM {project}.{footfall_dataset}.{codename}_visitors v
       INNER JOIN {project}.{footfall_dataset}.{codename}_streach br
-      ON v.did = br.devraw
+      ON v.did = br.did
   ),
   daily_totals AS (
       -- Calculate daily counts for common DIDs, backend DIDs, and visitor DIDs
       SELECT 
           v.local_day AS local_day,
           COUNT(DISTINCT cd.did) AS daily_common,
-          (SELECT COUNT(DISTINCT devraw) FROM {project}.{footfall_dataset}.{codename}_streach WHERE local_day = v.local_day) AS daily_backend,
+          (SELECT COUNT(DISTINCT did) FROM {project}.{footfall_dataset}.{codename}_streach WHERE local_day = v.local_day) AS daily_backend,
           (SELECT COUNT(DISTINCT did) FROM {project}.{footfall_dataset}.{codename}_visitors WHERE local_day = v.local_day) AS daily_visitors
       FROM {project}.{footfall_dataset}.{codename}_visitors v
       LEFT JOIN common_dids cd ON v.did = cd.did
