Removed the 'km' sign in travel_distance_km

--- a/projects/automation/queries.ini
+++ b/projects/automation/queries.ini
@@ -215,13 +215,13 @@ dwell_time = SELECT
 travel_distance_km = SELECT 
     distinct(did),
     CASE
-    WHEN travel_distance_km BETWEEN 0 AND 5 THEN '0 - 5 km'
-    WHEN travel_distance_km BETWEEN 5 AND 10 THEN '5 - 10 km'
-    WHEN travel_distance_km BETWEEN 10 AND 15 THEN '10 - 15 km'
-    WHEN travel_distance_km BETWEEN 15 AND 20 THEN '15 - 20 km'
-    WHEN travel_distance_km BETWEEN 20 AND 25 THEN '20 - 25 km'
-    WHEN travel_distance_km BETWEEN 25 AND 30 THEN '25 - 30 km'
-    ELSE '30+ km'
+    WHEN travel_distance_km BETWEEN 0 AND 5 THEN '0 - 5'
+    WHEN travel_distance_km BETWEEN 5 AND 10 THEN '5 - 10'
+    WHEN travel_distance_km BETWEEN 10 AND 15 THEN '10 - 15'
+    WHEN travel_distance_km BETWEEN 15 AND 20 THEN '15 - 20'
+    WHEN travel_distance_km BETWEEN 20 AND 25 THEN '20 - 25'
+    WHEN travel_distance_km BETWEEN 25 AND 30 THEN '25 - 30'
+    ELSE '30+'
     END AS distance_category
 
     FROM (
