Fixed "Retail" type

--- a/projects/automation/queries.ini
+++ b/projects/automation/queries.ini
@@ -233,7 +233,7 @@ travel_distance_km = SELECT
     ) AS subquery
 
 
-[Retail]
+[Retail Intelligence]
 queries = visitors,common_queries,visitors_in_competitors
 visitors=SELECT
     ls.did,
