fixed a bug in the employee query

--- a/projects/automation/queries.ini
+++ b/projects/automation/queries.ini
@@ -105,7 +105,7 @@ employee_vs_visitor =SELECT
   UNION ALL
   SELECT
     DISTINCT did,
-    "Employee" AS type,
+    "Visitor" AS type,
     POI_ID
   FROM (
     SELECT
