Changed the type of loyalists

--- a/projects/automation/queries.ini
+++ b/projects/automation/queries.ini
@@ -40,7 +40,7 @@ travel_distance = SELECT
 loyalist_vs_onetime=SELECT
      did,
      poi_id,
-     "Loyalists" AS Type
+     "More Than One Time" AS Type
     FROM (
      SELECT
       COUNT(DISTINCT(local_day)) AS days_visited,
