added footfall to placelifts with no backed reports

--- a/projects/automation/queries.ini
+++ b/projects/automation/queries.ini
@@ -429,7 +429,7 @@ share_of_volume = SELECT
 [Placelift No BER]
 
 
-queries = visitors,common_queries
+queries = visitors,common_queries,footfall
 
 
 
@@ -459,7 +459,37 @@ visitors = SELECT
     AND "{end_date_q}"
     and poi.radius={radius}
      
-
+footfall = SELECT
+    visitors_count,
+    uniques_count,
+    uniques.controlled,
+    CASE
+    WHEN uniques.controlled THEN 'Controlled'
+    ELSE 'Exposed'
+    END AS controlled_str,
+    (visitors_count/uniques_count) as Conversion_Rate
+  FROM (
+    SELECT
+      COUNT(DISTINCT(vis.did)) AS visitors_count,
+      seg.controlled
+    FROM
+      `{project}.{footfall_dataset}.{codename}_visitors` AS vis
+    JOIN
+      `{project}.{Campaign_segments_dataset}.{codename}_Segments` AS seg
+    ON
+      vis.did = seg.DID
+    GROUP BY
+      seg.controlled) AS visitors
+  JOIN (
+    SELECT
+      COUNT(DISTINCT(did)) AS uniques_count,
+      controlled
+    FROM 
+        `{project}.{Campaign_segments_dataset}.{codename}_Segments` AS seg
+    GROUP BY
+      controlled )AS uniques
+  ON
+    visitors.controlled = uniques.controlled
 
 [Placelift No Segments]
 
